leere Klammern raus weiterer Testfall